--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -25,7 +25,7 @@
 
                 function payWithPaystack() {
                     var handler = PaystackPop.setup({
-                        key: '<%= PAYSTACK_KEY %>', // Replace with your public key
+                        key: '<%= paystack_key %>', // Replace with your public key
                         email: '<%= email %>',
                         amount: '<%= totalSum %>' * 100, // the amount value is multiplied by 100 to convert to the lowest currency unit
                         currency: 'NGN', // Use GHS for Ghana Cedis or USD for US Dollars
